--- a/MULT168/Modal/style.css
+++ b/MULT168/Modal/style.css
@@ -3,11 +3,6 @@
     height: 28px;
     background: #2A8BFE;
     border-radius: 40px;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 14px;
-    line-height: 17px;
-    color: #FFFFFF;
 }
 .agentWidget {
     background: #FFFFFF;
@@ -18,4 +13,11 @@
 }
 .agentWidget:active{
     background-color: #0d4e88;
+}
+.main__container__widget_text{
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 17px;
+    color: #FFFFFF;
 }
