--- a/MULT168/Modal/style.css
+++ b/MULT168/Modal/style.css
@@ -7,18 +7,22 @@
     background: #2A8BFE;
     border-radius: 40px;
 }
-.main__container__widge:hover{
+
+.main__container__widge:hover {
     background-color: #1169B7;
 }
-.main__container__widge:active{
+
+.main__container__widge:active {
     background-color: #0d4e88;
 }
+
 .agentWidget {
     font-size: 20px;
     background: #2A8BFE;
     color: #FFFFFF;
 }
-.main__container__widget_text{
+
+.main__container__widget_text {
     font-style: normal;
     font-weight: 600;
     font-size: 14px;
@@ -27,7 +31,7 @@
 }
 
 /* ***** MODAL *** */
-.overlay{
+.overlay {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -38,11 +42,24 @@
     left: 0;
     background: rgba(0, 0, 0, .5);
 }
-.container__modal{
+
+.container__modal {
     width: 500px;
     min-height: 100px;
     background: #fff;
     position: relative;
     border-radius: 8px;
     padding: 20px;
+}
+
+.emcabezadoModal {
+    background-color: rgba(12, 125, 226, 1);
+}
+
+.emcabezadoModal>h3 {
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 29px;
+
+    color: #FFFFFF;
 }
