--- a/MULT168/Modal/style.css
+++ b/MULT168/Modal/style.css
@@ -19,7 +19,7 @@
 
 .agentWidget {
     font-size: 20px;
-    background: #2A8BFE;
+    background: transparent;
     color: #FFFFFF;
 }
 
@@ -42,6 +42,7 @@
     top: 0;
     left: 0;
     background: rgba(0, 0, 0, .5);
+    z-index: 9999;
 }
 
 .container__modal {
