--- a/MULT168/Modal/style.css
+++ b/MULT168/Modal/style.css
@@ -31,7 +31,7 @@
     color: #FFFFFF;
 }
 
-/* ***** MODAL *** */
+/* ***** Container Modal *** */
 .overlay {
     display: flex;
     align-items: center;
@@ -66,7 +66,8 @@
 
     color: #FFFFFF;
 }
-.closeModal{
+
+.closeModal {
     position: absolute;
     right: 20px;
     top: 14px;
@@ -77,4 +78,32 @@
     text-align: center;
     padding: 5px;
     font-size: 13px;
+}
+
+/* MODAL */
+.main__container__modalContactos {
+    display: flex;
+    padding: 16px;
+    background-color: rgba(244, 244, 244, 1);
+    width: 50%;
+    color: rgba(14, 65, 104, 1);
+
+}
+
+.modalContactos__telephone>p {
+    margin: 0 !important;
+}
+
+.modalContactos__telephone>span {
+    font-weight: 700;
+}
+
+.modalContactos__telephone_span {
+    font-style: italic;
+    font-weight: 400;
+    font-size: 10px;
+    line-height: 12px;
+    letter-spacing: -0.03em;
+
+    color: #8C8C8C;
 }
