--- a/MULT168/Modal/style.css
+++ b/MULT168/Modal/style.css
@@ -85,7 +85,10 @@
     display: flex;
     padding: 16px;
     background-color: rgba(244, 244, 244, 1);
+    width: 50%;
     color: rgba(14, 65, 104, 1);
+    margin: 8px;
+    border-radius: 8px;
 
 }
 
