--- a/MULT168/Modal/style.css
+++ b/MULT168/Modal/style.css
@@ -109,3 +109,13 @@
 
     color: #8C8C8C;
 }
+.glyphicon-phone{
+    background: #0D4E88;
+    width: 32px;
+    height: 32px;
+    border-radius: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    line-height: 0;
+}
