--- a/MULT168/Modal/style.css
+++ b/MULT168/Modal/style.css
@@ -118,3 +118,8 @@
     justify-content: center;
     line-height: 0;
 }
+.row-modal{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
