--- a/MULT168/Modal/style.css
+++ b/MULT168/Modal/style.css
@@ -46,7 +46,6 @@
 }
 
 .container__modal {
-    max-width: 600px;
     min-height: 100px;
     background: #fff;
     border-radius: 8px;
@@ -82,6 +81,7 @@
 
 /* MODAL */
 .main__container__modalContactos {
+    position: relative;
     display: flex;
     padding: 16px;
     background-color: rgba(244, 244, 244, 1);
@@ -128,7 +128,6 @@
     font-size: 10px;
     line-height: 12px;
     letter-spacing: -0.03em;
-
     color: #8C8C8C;
 }
 
@@ -148,4 +147,19 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.btn_Style_Venta_llamar {
+    position: absolute;
+    bottom: 16px;
+    width: 298px;
+    height: 37px;
+    background: #0D4E88;
+    border-radius: 12px;
+    border: 0;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 17px;
+
+    color: #F3F3F3;
 }
