--- a/MULT168/Modal/style.css
+++ b/MULT168/Modal/style.css
@@ -139,6 +139,21 @@
     line-height: 0;
     color: white;
 }
+.btn_Style_Venta_llamar:hover {
+    background-color: #283747;
+}
+
+.btn_Style_Venta_llamar:active {
+    background-color: rgba(39, 38, 38, 1);
+}
+.btn_Style_Venta_Contactarme:hover {
+    background-color: #00a94f;
+}
+
+.btn_Style_Venta_Contactarme:active {
+    background-color:rgba(1, 119, 56, 1);
+    ;
+}
 .row-modal {
     display: flex;
     justify-content: space-between;
