--- a/MULT168/Modal/style.css
+++ b/MULT168/Modal/style.css
@@ -223,6 +223,9 @@
     .main__container__widget {
         width: 80px;
         height: 24px;
+        background: #248DEA;
+        border: 1px solid #FFFFFF;
+        border-radius: 20px;
     }
 
     .main__container__widget_text {
