--- a/MULT168/Modal/style.css
+++ b/MULT168/Modal/style.css
@@ -46,6 +46,7 @@
 }
 
 .container__modal {
+    max-width: 90%;
     min-height: 100px;
     background: #fff;
     border-radius: 8px;
@@ -60,7 +61,6 @@
 
 .emcabezadoModal>h3 {
     font-weight: 600;
-    font-size: 24px;
     line-height: 29px;
 
     color: #FFFFFF;
@@ -99,7 +99,7 @@
     margin: 8px 8px;
     border-radius: 8px;
     height: 180px;
-    min-width: 330px;
+    max-width: 330px;
     gap: 12px;
 
 }
