--- a/MULT168/Modal/style.css
+++ b/MULT168/Modal/style.css
@@ -73,47 +73,19 @@
     background: #F9F9F9;
     border: none;
     cursor: pointer;
-    position: relative;
+    position: absolute;
     overflow: hidden;
     padding: 0;
+    top: 16px;
+    right: 16px;
+    border-radius: 100%;
 }
 
-.close-icon {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 14px;
-    height: 14px;
-    border-radius: 50%;
-    background: #000;
-}
-
-.close-icon::before,
-.close-icon::after {
-    content: '';
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 8px;
-    height: 2px;
-    background: #FFF;
-    transform: translate(-50%, -50%);
-}
-
-.close-icon::before {
-    transform: translate(-50%, -50%) rotate(45deg);
-}
-
-.close-icon::after {
-    transform: translate(-50%, -50%) rotate(-45deg);
-}
-
-.close-icon:hover {
+.close-button:hover {
     background-color: #e1e1e1;
 }
 
-.close-icon:active {
+.close-button:active {
     background-color: #969696;
     ;
 }
