--- a/MULT168/Modal/style.css
+++ b/MULT168/Modal/style.css
@@ -80,6 +80,11 @@
     right: 16px;
     border-radius: 100%;
 }
+.close-button>span{
+    position: absolute;
+    top: -12px;
+    right: 9px;
+}
 
 .close-button:hover {
     background-color: #e1e1e1;
