--- a/MULT168/Modal/style.css
+++ b/MULT168/Modal/style.css
@@ -252,3 +252,17 @@
 .modal__iconShare>.glyphicon{
     font-size: 72px;
 }
+.row-modal-icons-arriba{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 75px;
+    align-content: stretch;
+    text-align: center;
+}
+.row-modal-icons-abajo{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 82px;
+}
