--- a/MULT168/Modal/style.css
+++ b/MULT168/Modal/style.css
@@ -283,3 +283,9 @@
     flex-direction: column;
 
 }
+
+.container-fluid-modal {
+    display: flex;
+    justify-content: center;
+    padding: 10px;
+}
