--- a/MULT168/Modal/style.css
+++ b/MULT168/Modal/style.css
@@ -80,6 +80,7 @@
     top: 16px;
     right: 13px;
     border-radius: 100%;
+    font-weight: 800;
 }
 
 .close-button:hover {
@@ -107,7 +108,7 @@
 
 .ventas {
     font-weight: 500;
-    font-size: 16px;
+    font-size: 20px;
     line-height: 19px;
     margin-bottom: 8px;
 }
@@ -118,22 +119,22 @@
 
 .horario {
     font-weight: 600;
-    font-size: 12px;
+    font-size: 14px;
     line-height: 15px;
-    margin-bottom: 4px;
+    margin-bottom: 8px;
 }
 
 .dias {
     font-weight: 600;
-    font-size: 12px;
+    font-size: 14px;
     line-height: 15px;
-    margin-bottom: 4px;
+    margin-bottom: 8px;
 }
 
 .modalContactos__telephone_span {
     font-style: italic;
     font-weight: 400;
-    font-size: 10px;
+    font-size: 12px;
     line-height: 12px;
     letter-spacing: -0.03em;
     color: #8C8C8C;
@@ -238,9 +239,13 @@
         top: -12px;
         right: 9px;
     }
+
     .emcabezadoModal>h3 {
-        font-size: 18px;
-        text-align: center;
+        font-weight: 600;
+        line-height: 29px;
+        color: #FFFFFF;
+        letter-spacing: 0.4px;
+        font-size: 16px;
     }
 }
 
