--- a/MULT245/style.css
+++ b/MULT245/style.css
@@ -35,3 +35,6 @@
 .btn.btn-secondary.info-card__options-toggle.js-optiofns-toggle{
     display: none;
 }
+.info-card__actions a.abs{
+    right: 9px;
+}
