--- a/MULT245/style.css
+++ b/MULT245/style.css
@@ -32,9 +32,8 @@
 .info-card__action-item--share.js-social-share{
     display: block;
 }
-.btn.btn-secondary.info-card__options-toggle.js-optiofns-toggle{
+
+a.abs{
     display: none;
-}
-.info-card__actions a.abs{
     right: 9px;
 }
