--- a/MULT251/style.css
+++ b/MULT251/style.css
@@ -28,6 +28,7 @@ margin-top: 2px;
     color: #FFFFFF;
     background: #0D4E88;
     border-radius: 8px;
+    margin-right: 8px !important;
 }
 
 .booking-payment__options li.on .glyphicon {
