--- a/MULT245/style.css
+++ b/MULT245/style.css
@@ -37,3 +37,20 @@ a.abs{
     display: none;
     right: 9px;
 }
+
+.main__container__bannerMensageCard__App{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
+.main__container__bannerMensageCard{
+    width: 392px;
+    height: 45px;
+    display: flex;
+    background-color: #EAF4FC;
+    border-radius: 0px 16px 0px 0px;
+    padding: 6px 24px 6px 12px;
+}
+.main__container__bannerMensageCard>p{
+    margin-bottom: 0 !important;
+}
