--- a/MULT245/style.css
+++ b/MULT245/style.css
@@ -1,4 +1,4 @@
-.result.hotel-result{
+/* .result.hotel-result{
     height: 100%;
 
 }
@@ -36,7 +36,7 @@
 a.abs{
     display: none;
     right: 9px;
-}
+} */
 
 .main__container__bannerMensageCard__App{
     position: absolute;
