--- a/MULT245/style.css
+++ b/MULT245/style.css
@@ -1,4 +1,4 @@
-/* .result.hotel-result{
+.result.hotel-result{
     height: 100%;
 
 }
@@ -36,7 +36,7 @@
 a.abs{
     display: none;
     right: 9px;
-} */
+}
 
 .main__container__bannerMensageCard__App{
     position: absolute;
@@ -47,6 +47,7 @@ a.abs{
     width: 392px;
     height: 45px;
     display: flex;
+    align-items: center;
     background-color: #EAF4FC;
     border-radius: 0px 16px 0px 0px;
     padding: 6px 24px 6px 12px;
