--- a/MULT245/style.css
+++ b/MULT245/style.css
@@ -1,6 +1,5 @@
-.result.hotel-result{
+/* .result.hotel-result{
     height: 100%;
-
 }
 .info-card{
     height: 100%;
@@ -31,7 +30,7 @@
 }
 .info-card__action-item--share.js-social-share{
     display: block;
-}
+} */
 
 a.abs{
     display: none;
