--- a/MULT247/style.css
+++ b/MULT247/style.css
@@ -1,3 +1,43 @@
+/* ********** MULT-247 ********************** */
+.details-card__section-content {
+    display: none;
+}
+
+.details-card__map {
+    height: 226px !important;
+    border-radius: 8px;
+}
+
+#js-results-map-container {
+    border-radius: 8px;
+}
+
+.chevron-down-hotels {
+    position: absolute;
+    right: 22px;
+    top: 21px;
+    font-size: 28px;
+}
+
+.details-card__section {
+    position: relative;
+    cursor: pointer;
+    border-radius: 8px;
+}
+
+.gallery__item.item.gallery__item--with-caption {
+    border-radius: 8px;
+}
+
+.details-card__availability {
+    border-radius: 8px;
+}
+
+
 .slick-slide img {
     max-height: 200px !important;
-  }
+}
+
+.details-card__section-title {
+    font-size: 18px !important;
+}
