--- a/MULT225/style.css
+++ b/MULT225/style.css
@@ -1,10 +1,31 @@
 .main__seccion__pagos {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.main__seccion__pagos {
+    height: 241px;
     display: flex;
     flex-direction: row-reverse;
+    background: antiquewhite;
+    justify-content: space-evenly;
+}
+
+.btnStyleBannerSearch{
+    width: 217px;
+    height: 35px;
+    border-radius: 12px;
+    background: #0d4e88;
+    color: white;
+}
+.main__seccion__pagos__img{
+    width: 273px;
+    height: 225px;
+    padding: 8px;
+}
+.main__seccion__pagos__img>img{
+    width: 100%;
+    height: 100%;
+}
+.main__seccion__pagos__text>h2{
+    font-size: 24px;
+    font-weight: 500;
+}
+.main__seccion__pagos__text>p{
+    font-size: 16px;
 }
