--- a/MULT225/style.css
+++ b/MULT225/style.css
@@ -4,28 +4,38 @@
     background: antiquewhite;
     justify-content: space-evenly;
     align-items: center;
+    padding: 8px 32px;
 }
 
-.btnStyleBannerSearch{
+.btnStyleBannerSearch {
     width: 217px;
     height: 35px;
     border-radius: 12px;
     background: #0d4e88;
     color: white;
 }
-.main__seccion__pagos__img{
+
+.main__seccion__pagos__img {
     width: 273px;
     height: 225px;
-    padding: 8px;
 }
-.main__seccion__pagos__img>img{
+
+.main__seccion__pagos__img>img {
     width: 100%;
     height: 100%;
 }
-.main__seccion__pagos__text>h2{
+
+.main__seccion__pagos__text>h2 {
     font-size: 24px;
     font-weight: 500;
 }
-.main__seccion__pagos__text>p{
+
+.main__seccion__pagos__text>p {
     font-size: 16px;
+}
+
+.divSeccionPagos {
+    padding: 8px;
+    background: aqua;
+    border-radius: 8px;
 }
