--- a/MULT225/style.css
+++ b/MULT225/style.css
@@ -24,14 +24,19 @@
     width: 100%;
     height: 100%;
 }
+.main__seccion__pagos__text{
+    text-align: center;
+}
 
 .main__seccion__pagos__text>h2 {
     font-size: 24px;
     font-weight: 500;
+    text-align: left;
 }
 
 .main__seccion__pagos__text>p {
     font-size: 16px;
+    text-align: left;
 }
 
 .divSeccionPagos {
