--- a/MULT225/style.css
+++ b/MULT225/style.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row-reverse;
     background: antiquewhite;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
     padding: 8px 32px;
 }
@@ -16,6 +16,7 @@
 }
 .main__container__divSeccionPagos{
     display: flex;
+    gap: 12px;
 }
 
 .main__seccion__pagos__img {
