--- a/MULT263/style.css
+++ b/MULT263/style.css
@@ -1,5 +1,6 @@
 .main__container_excluvisa{
     display: flex;
+    height: 158px;
     justify-content: space-between;
     border-radius: 40px 8px;
     background-color: #2a8bfe;
@@ -22,7 +23,7 @@
 }
 
 .main__container_excluvisa__img>img{
-    border-radius: 40px 0 0 0;
+    border-radius: 48px 0 0 0;
     width: 100%;
     height: 100%;
 }
