--- a/MULT263/style.css
+++ b/MULT263/style.css
@@ -20,6 +20,7 @@
 .main__container_excluvisa__img{
     width: 336px;
     background-color: #E2E6E9;
+    border-radius: 40px 0 0 0;
 }
 
 .main__container_excluvisa__img>img{
