--- a/MULT263/style.css
+++ b/MULT263/style.css
@@ -11,6 +11,7 @@
     width: 68%;
 }
 .main__container_excluvisa__text__h1>h1{
+    font-family: Qanelas;
     font-weight: bold;
     font-size: 32px;
 }
