--- a/MULT263/style.css
+++ b/MULT263/style.css
@@ -40,7 +40,7 @@
     width: 224px;
     height: 48px;
     position: absolute;
-    left: 63%;
+    right: 226px;
     bottom: 35%;
     color: #FFFFFF;
     background-color: #0d4e88;
