--- a/MULT263/style.css
+++ b/MULT263/style.css
@@ -5,6 +5,8 @@
     border-radius: 40px 8px;
     background-color: #2a8bfe;
     position: relative;
+    margin-bottom: 30px;
+    
 }
 
 .main__container_excluvisa__text {
