--- a/MULT258/style.css
+++ b/MULT258/style.css
@@ -1,27 +1,22 @@
-.custom-div {
-    width: 410px;
-    height: 112px;
-    padding: 16px;
-    border-radius: 8px;
-    border: 1px solid #cccccc;
-  }
-  
-  .custom-img {
-    width: 64px;
-    height: 80px;
-    border-radius: 4px;
-    float: left;
-    margin-right: 16px;
-  }
-  
-  .custom-content {
-    overflow: hidden;
-  }
-  
-  .custom-content h2 {
-    margin-top: 0;
-  }
-  
-  .custom-content p {
-    margin-bottom: 0;
-  }
+.custom-img {
+  width: 64px;
+  height: 80px;
+  border-radius: 4px;
+  float: left;
+  margin-right: 16px;
+}
+
+.custom-content {
+  overflow: hidden;
+}
+
+.custom-content h2 {
+  margin-top: 0;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.custom-content p {
+  font-size: 12px;
+  margin-bottom: 0;
+}
