--- a/MULT258/style.css
+++ b/MULT258/style.css
@@ -20,3 +20,16 @@
   font-size: 12px;
   margin-bottom: 0;
 }
+
+@media(max-width:767px){
+  .toastify{
+    height: 131px;
+    bottom: 0;
+  }
+  .custom-img{
+    display: none
+  }
+  .custom-content h2 {
+    font-size: 18px;
+  }
+}
