--- a/MULT274/style.css
+++ b/MULT274/style.css
@@ -147,7 +147,7 @@ source>img {
     cursor: pointer;
     line-height: 35px;
     color: #fff;
-    background: #fccd07;
+    background: #7ecbff;
     font-size: 1.5rem;
     z-index: 1;
     border-radius: 50%;
@@ -156,6 +156,7 @@ source>img {
 
 .carrusel__anterior:hover,
 .carrusel__siguiente:hover {
+    background-color: #0098ff;
     opacity: 100%;
 }
 
@@ -199,7 +200,7 @@ source>img {
     width: 7px;
     height: 7px;
     border-radius: 50%;
-    background: #fccd07;
+    background: #7ecbff;
     margin: -4px 0 0 -4px;
 }
 
@@ -210,6 +211,7 @@ source>img {
 .lds-roller div:nth-child(1):after {
     top: 63px;
     left: 63px;
+    background: linear-gradient(45deg, rgba(126, 203, 255, 1), rgba(126, 203, 255, 0.5));
 }
 
 .lds-roller div:nth-child(2) {
@@ -219,6 +221,7 @@ source>img {
 .lds-roller div:nth-child(2):after {
     top: 68px;
     left: 56px;
+    background: linear-gradient(45deg, rgba(126, 203, 255, 0.8), rgba(126, 203, 255, 0.3));
 }
 
 .lds-roller div:nth-child(3) {
@@ -228,6 +231,7 @@ source>img {
 .lds-roller div:nth-child(3):after {
     top: 71px;
     left: 48px;
+    background: linear-gradient(45deg, rgba(126, 203, 255, 0.6), rgba(126, 203, 255, 0.1));
 }
 
 .lds-roller div:nth-child(4) {
@@ -237,6 +241,7 @@ source>img {
 .lds-roller div:nth-child(4):after {
     top: 72px;
     left: 40px;
+    background: linear-gradient(45deg, rgba(126, 203, 255, 0.4), rgba(126, 203, 255, 0));
 }
 
 .lds-roller div:nth-child(5) {
@@ -246,15 +251,17 @@ source>img {
 .lds-roller div:nth-child(5):after {
     top: 71px;
     left: 32px;
+    background: linear-gradient(45deg, rgba(126, 203, 255, 0.6), rgba(126, 203, 255, 0.1));
 }
 
 .lds-roller div:nth-child(6) {
     animation-delay: -0.216s;
 }
 
-.lds-roller div:nth-child(6):after {
-    top: 68px;
-    left: 24px;
+.lds-roller div:nth-child(7):after {
+    top: 63px;
+    left: 17px;
+    background: linear-gradient(45deg, rgba(126, 203, 255, 1), rgba(126, 203, 255, 0.5));
 }
 
 .lds-roller div:nth-child(7) {
@@ -273,7 +280,9 @@ source>img {
 .lds-roller div:nth-child(8):after {
     top: 56px;
     left: 12px;
+    background: linear-gradient(45deg, rgba(126, 203, 255, 0.8), rgba(126, 203, 255, 0.3));
 }
+
 
 @keyframes lds-roller {
     0% {
