--- a/MULT258/style.css
+++ b/MULT258/style.css
@@ -20,6 +20,9 @@
   font-size: 12px;
   margin-bottom: 0;
 }
+.main__conteiner__s2{
+  background-color: #DAF0FF;
+}
 
 @media(max-width:767px){
   .toastify{
