--- a/MULT258/style.css
+++ b/MULT258/style.css
@@ -19,11 +19,8 @@
 .custom-content p {
   font-size: 12px;
   margin-bottom: 0;
+  margin: 0 !important;
 }
-.main__conteiner__s2{
-  background-color: #DAF0FF;
-}
-
 @media(max-width:767px){
   .toastify{
     max-width: calc(100% - 20px);
