--- a/MULT274/style.css
+++ b/MULT274/style.css
@@ -583,7 +583,7 @@ source>img {
 }
 .chevron-style{
     position: absolute;
-    right: 31px;
+    right: 5%;
     font-size: 26px;
     top: 16px;
 }
