--- a/MULT274/style.css
+++ b/MULT274/style.css
@@ -617,4 +617,7 @@ details[open] summary .chevron-style {
         flex-direction: column;
         align-items: center;
     }
+    .acordeonComponen__container__title>span{
+        font-size: 14px;
+    }
 }
