--- a/MULT245/style.css
+++ b/MULT245/style.css
@@ -182,6 +182,14 @@
   margin-bottom: 0 !important;
 }
 
+.right-14px {
+  right: 14px;
+}
+
+.right-0px {
+  right: 0px;
+}
+
 @media (max-width: 767px) {
   .share__icon {
     width: 40px;
