--- a/MULT245/style.css
+++ b/MULT245/style.css
@@ -20,6 +20,9 @@
   top: 55px;
   right: 20px;
 }
+.right-14px{
+  right: 24px;
+}
 
 .deals>.label-info {
   display: block;
@@ -72,7 +75,7 @@
   background: #DF0032;
   border-radius: 12px;
   position: relative;
-  right: 14px;
+  right: 0;
 }
 
 .info-card__actions {
