--- a/MULT258/style.css
+++ b/MULT258/style.css
@@ -32,6 +32,9 @@
     height: 131px !important;
     bottom: 0 !important;
   }
+  .toastify-left{
+    left: 0 !important;
+  }
 
   .custom-img {
     display: none;
