--- a/MULT258/style.css
+++ b/MULT258/style.css
@@ -55,7 +55,7 @@
     border-radius: 100%;
     color: black;
     text-align: center;
-    display: flex;
+    display: none;
     align-items: center;
     justify-content: center;
   }
