--- a/MULT263/style.css
+++ b/MULT263/style.css
@@ -67,6 +67,7 @@
     .main__container_excluvisa__text{
         width: 100%;
         padding: 17px;
+        margin: 0;
     }
     .main__container_excluvisa__text__h1>h1 {
         font-size: 24px;
@@ -79,6 +80,7 @@
         height: 213px;
     }
     .main__container_excluvisa__img{
+        width: 100%;
         border-radius: 0 0 40px 8px;
     }
 }
