--- a/MULT263/style.css
+++ b/MULT263/style.css
@@ -7,6 +7,7 @@
     position: relative;
     margin-bottom: 30px;
 }
+
 .main__container_excluvisa__text {
     color: white;
     margin: auto 64px;
@@ -41,8 +42,8 @@
     width: 224px;
     height: 48px;
     position: absolute;
-    left: 63%;
-    bottom: 35%;
+    right: inherit;
+    bottom: 226px;
     color: #FFFFFF;
     background-color: #0d4e88;
     font-size: 16xp;
@@ -64,23 +65,44 @@
         border-radius: 8px 8px 40px 8px;
     }
 
-    .main__container_excluvisa__text{
+    .main__container_excluvisa__text {
         width: 100%;
         padding: 17px;
         margin: 0;
     }
+
     .main__container_excluvisa__text__h1>h1 {
         font-size: 24px;
     }
-    
+
     .main__container_excluvisa__text__p>p {
         font-size: 16px;
     }
-    .main__container_excluvisa{
+
+    .main__container_excluvisa {
         height: 213px;
     }
-    .main__container_excluvisa__img{
+
+    .main__container_excluvisa__img {
         width: 100%;
         border-radius: 0 0 40px 8px;
+    }
+
+    .btnStyleBannerHotelsResult {
+        left: 18px;
+        bottom: 57px;
+    }
+}
+@media(min-width: 768px) and (max-width:1023){
+    .btnStyleBannerHotelsResult {
+        left: 487px;
+    }
+
+    .main__container_excluvisa__text__h1>h1 {
+        font-size: 24px;
+    }
+
+    .main__container_excluvisa__text__p>p {
+        font-size: 16px;
     }
 }
